--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,17 @@ theme = "papermod"
     url = "/"
     weight = 10
   [[menu.main]]
+    identifier = "github"
+    name = "GitHub"
+    url = "https://github.com/rossf7"
+    weight = 20
+  [[menu.main]]
+    identifier = "twitter"
+    name = "Twitter"
+    url = "https://twitter.com/rossf7"
+    weight = 30
+  [[menu.main]]
     identifier = "about"
     name = "About"
     url = "/about/"
-    weight = 20
+    weight = 40
